persistence layer test refactoring